vendor/structopt-0.3.21/tests/ui/flatten_and_methods.stderr
error: methods are not allowed for flattened entry
  --> $DIR/flatten_and_methods.rs:22:24
   |
22 |     #[structopt(short, flatten)]
   |                        ^^^^^^^
